<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlueBackground"
    tools:context="com.example.maxime.messengerapp.activity.ProfileConfigActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/simple_yellow"
        android:minHeight="?attr/actionBarSize">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/toolbarText"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/name_app" />

        <ImageView
            android:id="@+id/imageProfileTop"
            android:layout_width="@dimen/name_app"
            android:layout_height="@dimen/name_app"
            android:layout_gravity="right"
            android:src="@mipmap/android3"
            android:contentDescription="" />

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/RelativeLayoutEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:padding="@dimen/paddingText"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/paddingText"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/pwdConf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pwd"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="@dimen/paddingText"
            android:textSize="@dimen/textsize" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/RelativeLayoutEditText"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <ImageView
            android:id="@+id/imageProfile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/ButtonImage"
            android:layout_centerInParent="true"
            android:scaleType="fitXY"
            android:contentDescription="" />

        <com.dd.processbutton.iml.ActionProcessButton
            android:id="@+id/ButtonImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/ButtonSave"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/upload_profile_picture"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            custom:pb_colorComplete="@color/green_complete"
            custom:pb_colorError="@color/red_error"
            custom:pb_colorNormal="@color/blue_normal"
            custom:pb_colorPressed="@color/blue_pressed"
            custom:pb_colorProgress="@color/purple_progress"
            custom:pb_textComplete="@string/pb_textComplete"
            custom:pb_textError="@string/pb_textError"
            custom:pb_textProgress="@string/pb_textProgress" />

        <com.dd.processbutton.iml.ActionProcessButton
            android:id="@+id/ButtonSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="16dp"
            android:text="@string/submit"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            custom:pb_colorComplete="@color/green_complete"
            custom:pb_colorError="@color/red_error"
            custom:pb_colorNormal="@color/blue_normal"
            custom:pb_colorPressed="@color/blue_pressed"
            custom:pb_colorProgress="@color/purple_progress"
            custom:pb_textComplete="Success"
            custom:pb_textError="Error"
            custom:pb_textProgress="Loading" />
    </RelativeLayout>


</RelativeLayout>